# mrcond

./: Cargo.toml  LICENSE  METRICS.md  Makefile  PROMETHEUS_IMPLEMENTATION.md  PUBLISH_SETUP_SUMMARY.md  README.md  RELEASING.md  config.yaml  deny.toml  docker-compose.yaml  notes.md  prepare-release.sh  run-tests-with-logs.sh  test-metrics.sh
.github/: dependabot.yaml
.github/workflows/: audit.yml  ci.yml  publish.yml  semver.yml
mongodb_rabbitmq_connector/: Cargo.toml  README.md
mongodb_rabbitmq_connector/src/: config.rs  lib.rs  server.rs
mongodb_rabbitmq_connector/src/mongo/: connector.rs  mod.rs  resume_tokens.rs  watcher.rs
mongodb_rabbitmq_connector/src/rabbitmq/: amqp.rs  error.rs  publish.rs
mongodb_rabbitmq_connector/tests/: e2e.rs
mongodb_rabbitmq_connectord/: Cargo.toml  Dockerfile  README.md
mongodb_rabbitmq_connectord/src/: main.rs
mongodb_rabbitmq_connectord/tests/: e2e.rs
mongodb_rabbitmq_connectord/tests/data/simple/: connections.yaml  input.json
mrcon/: Cargo.toml  README.md
mrcon/src/: config.rs  lib.rs  metrics.rs  prelude.rs  server.rs
mrcon/src/mongo/: connector.rs  mod.rs  resume_tokens.rs
mrcon/src/rabbitmq/: amqp.rs
mrcond/: Cargo.toml  Dockerfile  Dockerfile.release  README.md
mrcond/src/: main.rs
mrcond/tests/: e2e.rs
mrcond/tests/data/simple/: config.yaml  connections.yaml
src/: config.rs  lib.rs  mongo.rs
src/mongo/: resume_tokens.rs  watcher.rs
src/rabbitmq/: amqp.rs  mod.rs  publish.rs  publisher.rs
