[workspace]
resolver = "2"
members = ["mrcon", "mrcond"]

[workspace.package]
license = "MIT"
authors = ["Dmitry Danilov"]
edition = "2021"
keywords = ["mongodb", "rabbitmq", "connector", "cdc", "rust"]
categories = ["mongodb", "rabbitmq", "connector", "cdc", "rust"]
repository = "https://github.com/f-squirrel/mrcond"

[workspace.dependencies]
mongodb = { version = "3" }
lapin = { version = "2.5" }
futures-util = "0.3"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
config = "0.13"
env_logger = "0.11"
tracing = "0.1"
bson = { version = "2" }
thiserror = "1"
async-trait = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
axum = "0.8"
reqwest = { version = "0.12" }
prometheus = "0.13"
axum-prometheus = "0.7"
