[workspace]
resolver = "2"
members = ["mrcon", "mrcond"]

[workspace.package]
license = "MIT"
authors = ["Dmitry Danilov"]
edition = "2021"
keywords = ["mongodb", "rabbitmq", "connector", "cdc", "rust"]
categories = ["mongodb", "rabbitmq", "connector", "cdc", "rust"]
repository = "https://github.com/f-squirrel/mrcond"

[workspace.dependencies]
mongodb = { version = "3" }
lapin = { version = "3" }
futures-util = "0.3"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
config = "0"
tracing = "0"
bson = { version = "2" }
thiserror = "2"
async-trait = "0"
tracing-subscriber = { version = "0", features = ["fmt", "env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
axum = "0"
reqwest = { version = "0" }
prometheus = "0"
axum-prometheus = "0"
