[package]
name = "mongodb_rabbitmq_connector"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb.workspace = true
lapin.workspace = true
futures-util.workspace = true
serde_json.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
bson.workspace = true
thiserror.workspace = true
async-trait.workspace = true
