[package]
name = "mongodb_rabbitmq_connectord"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb_rabbitmq_connector = { path = "../mongodb_rabbitmq_connector" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
clap = { version = "4.5", features = ["derive"] }
