[package]
name = "mrcon"

version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mongodb.workspace = true
lapin.workspace = true
futures-util.workspace = true
serde_json.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
bson.workspace = true
thiserror.workspace = true
async-trait.workspace = true
prometheus.workspace = true
