[package]
name = "mrcon"
version = "0.1.0"
description = "MongoDB to RabbitMQ connector library for streaming change events"

authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mongodb.workspace = true
lapin.workspace = true
futures-util.workspace = true
serde_json.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
bson.workspace = true
thiserror.workspace = true
async-trait.workspace = true
prometheus.workspace = true
