[package]
name = "mrcond"
version = "0.1.0"
edition = "2021"

[dependencies]
mrcon = { path = "../mrcon" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
axum = { workspace = true }


[dev-dependencies]
bson.workspace = true
mongodb.workspace = true
lapin.workspace = true
serde_json.workspace = true
serde.workspace = true
futures-util.workspace = true
