[package]
name = "mrcond"

version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mrcon = { path = "../mrcon" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
axum = { workspace = true }
prometheus.workspace = true
axum-prometheus.workspace = true


[dev-dependencies]
bson.workspace = true
mongodb.workspace = true
lapin.workspace = true
serde_json.workspace = true
serde.workspace = true
futures-util.workspace = true
reqwest.workspace = true
