[package]
name = "mrcond"
version = "0.1.0"
description = "MongoDB to RabbitMQ connector daemon - CLI tool for streaming MongoDB change events to RabbitMQ"

authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mrcon = { version = "0.1.0", path = "../mrcon" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
axum = { workspace = true }
prometheus.workspace = true
axum-prometheus.workspace = true


[dev-dependencies]
bson.workspace = true
mongodb.workspace = true
lapin.workspace = true
serde_json.workspace = true
serde.workspace = true
futures-util.workspace = true
reqwest.workspace = true
